# dz_22.1_django_Forms

./: .env.sample  .gitignore  README.md  catalog.json  groups.json  pyproject.toml
blog/: models.py  services.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_alter_blog_created_at_alter_blog_slug.py  0003_alter_blog_slug.py  0004_alter_blog_slug.py
blog/templates/blog/: blog_confirm_delete.html  blog_detail.html  blog_form.html  blog_list.html
catalog/: admin.py  forms.py  models.py  services.py  urls.py  views.py
catalog/management/commands/: fill.py
catalog/migrations/: 0001_initial.py  0002_product_manufactured_at.py  0003_contact_remove_product_manufactured_at.py  0004_alter_product_created_at_alter_product_created_up.py  0005_rename_created_up_product_updated_at.py  0006_version.py  0007_product_owner.py  0008_alter_product_options_product_is_published.py
catalog/templates/catalog/: contact_detail.html  contact_list.html  contacts.html  home.html  product_confirm_delete.html  product_detail.html  product_form.html  product_list.html  version_confirm_delete.html  version_detail.html  version_form.html  version_list.html
catalog/templates/catalog/includes/: inc_menu.html
catalog/templatetags/: my_tags.py
config/: settings.py  urls.py
users/: admin.py  forms.py  models.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py  0002_alter_user_options_user_token_alter_user_avatar.py
users/templates/users/: login.html  recovery_password_form.html  register.html  user_form.html
