[tool.poetry]
name = "dz-22-1-django-Forms"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.12"
django = "4.2"
black = "^24.8.0"
ipython = "^8.26.0"
django-stubs = "4.2"
psycopg2 = "^2.9.9"
pillow = "^10.4.0"
pytils = "^0.4.1"
flake8 = "^7.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

package-mode = false